--- a/cf/i18n/resources/fr-fr.untranslated.json
+++ b/cf/i18n/resources/fr-fr.untranslated.json
@@ -48,6 +48,10 @@
     "translation": "Before getting started:"
   },
   {
+    "id": "CANCELING",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME add-plugin-repo PrivateRepo https://myprivaterepo.com/repo/",
     "translation": "CF_NAME add-plugin-repo PrivateRepo https://myprivaterepo.com/repo/"
   },
@@ -544,6 +548,10 @@
     "translation": "CF_NAME staging-security-groups"
   },
   {
+    "id": "CF_NAME tasks APP_NAME",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME unbind-route-service DOMAIN SERVICE_INSTANCE [--hostname HOSTNAME] [--path PATH] [-f]\\n\\nEXAMPLES:\\n   CF_NAME unbind-route-service example.com myratelimiter --hostname myapp --path foo",
     "translation": "CF_NAME unbind-route-service DOMAIN SERVICE_INSTANCE [--hostname HOSTNAME] [--path PATH] [-f]\\n\\nEXAMPLES:\\n   CF_NAME unbind-route-service example.com myratelimiter --hostname myapp --path foo"
   },
@@ -744,6 +752,10 @@
     "translation": ""
   },
   {
+    "id": "Getting tasks for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.CurrentUser}}...",
+    "translation": ""
+  },
+  {
     "id": "Global options:",
     "translation": "Global options:"
   },
@@ -766,6 +778,10 @@
   {
     "id": "Invalid flag: ",
     "translation": "Invalid flag: "
+  },
+  {
+    "id": "List tasks of an app",
+    "translation": ""
   },
   {
     "id": "Map an HTTP route:\\n      CF_NAME map-route APP_NAME DOMAIN [--hostname HOSTNAME] [--path PATH]\\n\\n   Map a TCP route:\\n      CF_NAME map-route APP_NAME DOMAIN (--port PORT | --random-port)\\n\\nEXAMPLES:\\n   CF_NAME map-route my-app example.com                              # example.com\\n   CF_NAME map-route my-app example.com --hostname myhost            # myhost.example.com\\n   CF_NAME map-route my-app example.com --hostname myhost --path foo # myhost.example.com/foo\\n   CF_NAME map-route my-app example.com --port 5000                  # example.com:5000",
@@ -836,6 +852,10 @@
     "translation": "Org management:"
   },
   {
+    "id": "PENDING",
+    "translation": ""
+  },
+  {
     "id": "PORT",
     "translation": "PORT"
   },
@@ -866,6 +886,10 @@
   {
     "id": "ROUTES",
     "translation": "ROUTES"
+  },
+  {
+    "id": "RUNNING",
+    "translation": ""
   },
   {
     "id": "Really delete orphaned routes?",
@@ -902,6 +926,10 @@
   {
     "id": "SERVICES",
     "translation": "SERVICES"
+  },
+  {
+    "id": "SUCCEEDED",
+    "translation": ""
   },
   {
     "id": "Service instance",
@@ -1300,6 +1328,10 @@
     "translation": "name:"
   },
   {
+    "id": "order_by",
+    "translation": ""
+  },
+  {
     "id": "plan",
     "translation": "plan"
   },
@@ -1338,6 +1370,10 @@
   {
     "id": "services",
     "translation": "services"
+  },
+  {
+    "id": "start time",
+    "translation": ""
   },
   {
     "id": "timeout connecting to log server, no log will be shown",
