--- a/cf/i18n/resources/pt-br.untranslated.json
+++ b/cf/i18n/resources/pt-br.untranslated.json
@@ -92,6 +92,10 @@
     "translation": "Before getting started:"
   },
   {
+    "id": "CANCELING",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME add-plugin-repo PrivateRepo https://myprivaterepo.com/repo/",
     "translation": "CF_NAME add-plugin-repo PrivateRepo https://myprivaterepo.com/repo/"
   },
@@ -908,6 +912,10 @@
     "translation": "CF_NAME target [-o ORG] [-s SPACE]"
   },
   {
+    "id": "CF_NAME tasks APP_NAME",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME unbind-route-service DOMAIN SERVICE_INSTANCE [--hostname HOSTNAME] [--path PATH] [-f]",
     "translation": "CF_NAME unbind-route-service DOMAIN SERVICE_INSTANCE [--hostname HOSTNAME] [--path PATH] [-f]"
   },
@@ -1200,6 +1208,10 @@
     "translation": ""
   },
   {
+    "id": "Getting tasks for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.CurrentUser}}...",
+    "translation": ""
+  },
+  {
     "id": "Global options:",
     "translation": "Global options:"
   },
@@ -1234,6 +1246,10 @@
   {
     "id": "Invalid flag: ",
     "translation": "Invalid flag: "
+  },
+  {
+    "id": "List tasks of an app",
+    "translation": ""
   },
   {
     "id": "MANIFEST_PATH",
@@ -1324,6 +1340,10 @@
     "translation": "PATH"
   },
   {
+    "id": "PENDING",
+    "translation": ""
+  },
+  {
     "id": "PORT",
     "translation": "PORT"
   },
@@ -1360,6 +1380,10 @@
     "translation": "ROUTE_PATH"
   },
   {
+    "id": "RUNNING",
+    "translation": ""
+  },
+  {
     "id": "Really delete orphaned routes?",
     "translation": ""
   },
@@ -1390,6 +1414,10 @@
   {
     "id": "SPACE",
     "translation": "SPACE"
+  },
+  {
+    "id": "SUCCEEDED",
+    "translation": ""
   },
   {
     "id": "Service instance",
@@ -1840,6 +1868,10 @@
     "translation": "none"
   },
   {
+    "id": "order_by",
+    "translation": ""
+  },
+  {
     "id": "org",
     "translation": "org"
   },
@@ -1854,6 +1886,10 @@
   {
     "id": "service_guid IN ",
     "translation": "service_guid IN "
+  },
+  {
+    "id": "start time",
+    "translation": ""
   },
   {
     "id": "status",
