added additional behavior to v3 tasks command
- tranform task start time to human readable format
- show [hidden] for task command if not returned by API
- display empty table if there are no tasks

[#131231309]

Signed-off-by: Nick Wei <nwei@pivotal.io>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -5816,6 +5816,10 @@
     "translation": "[globale Optionen] Befehl [Argumente...] [Befehlsoptionen]"
   },
   {
+    "id": "[hidden]",
+    "translation": ""
+  },
+  {
     "id": "access",
     "translation": "Zugriff"
   },
