--- a/cf/i18n/resources/ja-jp.untranslated.json
+++ b/cf/i18n/resources/ja-jp.untranslated.json
@@ -1716,6 +1716,10 @@
     "translation": "[PRIVATE DATA HIDDEN]"
   },
   {
+    "id": "[hidden]",
+    "translation": ""
+  },
+  {
     "id": "cf --version",
     "translation": "cf --version"
   },
