--- a/cf/i18n/resources/pt-br.untranslated.json
+++ b/cf/i18n/resources/pt-br.untranslated.json
@@ -1796,6 +1796,10 @@
     "translation": "[PRIVATE DATA HIDDEN]"
   },
   {
+    "id": "[hidden]",
+    "translation": ""
+  },
+  {
     "id": "app",
     "translation": "app"
   },
