--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -1768,6 +1768,10 @@
     "translation": "[PRIVATE DATA HIDDEN]"
   },
   {
+    "id": "[hidden]",
+    "translation": ""
+  },
+  {
     "id": "actor",
     "translation": "actor"
   },
