--- a/cf/i18n/resources/zh-hans.untranslated.json
+++ b/cf/i18n/resources/zh-hans.untranslated.json
@@ -1752,6 +1752,10 @@
     "translation": "[global options] command [arguments...] [command options]"
   },
   {
+    "id": "[hidden]",
+    "translation": ""
+  },
+  {
     "id": "cf --version",
     "translation": "cf --version"
   },
